# FactStack

./: .gitignore  README.md  README_zh.md  pyproject.toml  requirements.txt
docs/: database_connection_pools.md  deployment_runbook.md  incident_response.md  kubernetes_pod_troubleshooting.md  memory_troubleshooting.md  network_latency_troubleshooting.md
prompts/: base.yaml  strict.yaml
src/factstack/: __init__.py  ask.py  config.py  eval.py  ingest.py
src/factstack/llm/: __init__.py  base.py  dummy_llm.py  openai_llm.py  schemas.py
src/factstack/observability/: __init__.py  tracer.py
src/factstack/pipeline/: __init__.py  assemble.py  bm25_store.py  chunking.py  cross_lingual.py  embeddings.py  query_language.py  query_translate.py  refusal.py  rerank.py  vector_store.py
src/factstack/utils/: __init__.py  text.py  time.py
src/factstack/web/: __init__.py  __main__.py  app.py
src/factstack/web/static/: app.js  style.css
src/factstack/web/templates/: index.html
tests/: eval_set.yaml
